--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
+    "react-spinners": "^0.11.0",
     "react-tiny-popover": "^7.0.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
