--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.6.6",
     "framer-motion": "^6.2.3",
     "react": "^17.0.2",
+    "react-animate-height": "^2.0.23",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
