--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^0.26.1",
+    "dateformat": "^5.0.3",
     "firebase": "^9.6.6",
     "framer-motion": "^6.2.3",
     "react": "^17.0.2",
